bug fix 3.0(overflow problem)

--- a/SignUp and Login/css/sign.scss
+++ b/SignUp and Login/css/sign.scss
@@ -378,7 +378,7 @@ input:focus{
 
 @media only screen and (max-width:650px){
     body{
-        width: 100vw;
+        width: 50%;
         display: block;
     }
     section{
@@ -401,6 +401,9 @@ input:focus{
             transform: translateY(560px);
             animation: mobile 3s infinite;
             h2:nth-child(2){
+                display: none;
+            }
+            #first{
                 display: none;
             }
         }
